style.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#grid-container,
.grid-square {
    border-style: solid;
    border-color:rgb(247, 243, 243);
    border-width: thin;
    box-sizing: border-box;
}

#grid-container {
    display: flex;
    flex-wrap: wrap;
}

.user-question{
    padding-bottom: 25px;
}

.colored-square{
    background-color: #FF91AF;
    border-color: #FF69B4;
}

